--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,16 +4,16 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-miden-client = { version = "0.8.1", features = ["testing", "concurrent", "tonic", "sqlite"] }
-# miden-client = { path = "../miden-client/crates/rust-client", features = ["testing", "concurrent", "tonic", "sqlite"] }
-miden-lib = { version = "0.8", default-features = false }
-miden-objects = { version = "0.8", default-features = false }
-miden-crypto = { version = "0.14.0", features = ["executable"] }
-miden-assembly = "0.14.0"
+miden-client = { version = "0.10.0", features = ["testing", "tonic", "sqlite"] }
+miden-lib = { version = "0.10.0", default-features = false }
+miden-objects = { version = "0.10.0", default-features = false }
+miden-testing = { version = "0.10.0", default-features = false }
+miden-crypto = { version = "0.14.1", features = ["executable"] }
+miden-assembly = "0.15.0"
 rand = { version = "0.9" }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1.0", features = ["raw_value"] }
 tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros"] }
 rand_chacha = "0.9.0"
-# miden-client-tools = "0.1.1"
+# miden-client-tools = "0.2.6"
 miden-client-tools = { path = "../miden-client-tools" }
